--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
 	<script src="components/component.js"></script>
 	<script src="components/commentsComponents.js"></script>
 	<script src="components/beeComponents.js"></script>
-	<script src="components/postsComponents.js"></script>
+	<script src="components/postComponents.js"></script>
 	<script src="managers/dataManager.js"></script>
 	<script src="managers/navManager.js"></script>
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/beesComponent.css">
 	<link rel="stylesheet" href="css/appComponent.css">
 	<link rel="stylesheet" href="css/beesActivityComponent.css">
+	<link rel="stylesheet" href="css/postComponent.css">
 </head>
 <main>
 
